[package]
name = "ckb-rust-sdk-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
ckb-hash = "0.104"
ckb-jsonrpc-types = "0.104"
ckb-sdk = "1.1.0"
ckb-types = "0.104"
secp256k1 = { version = "0.20.3", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
